feat: generate project workflows
